--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -1,22 +1,26 @@
 /* ----- main ----- */
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+/* :root { */
+  /* font-family: Inter, Avenir, Helvetica, Arial, sans-serif; */
   /* font-size: 16px;
   line-height: 24px;
   font-weight: 400; */
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  /* color-scheme: light dark; */
+  /* color: rgba(255, 255, 255, 0.87); */
   /* background-color: #242424; */
-}
+/* } */
 
 /* ----- App ----- */
-#root {
+/* #root {
   max-width: 1280px;
+  min-height: 100vh;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
-}
+} */
+
+/* .App{
+  min-height: 100vh;
+} */
 
 /* body {
   margin: 0;
